Updated some layout

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -9,6 +9,11 @@
     height: 100%;
     width: 70px;
     padding: 25px;
+    
+    .logo {
+      width: 150px;
+      height: 150px;
+    }
   }
 
   .options {
