--- a/src/components/cart-icon/cart-icon.styles.scss
+++ b/src/components/cart-icon/cart-icon.styles.scss
@@ -6,16 +6,18 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  padding-bottom: 10px;
 
   .shopping-icon {
-    width: 24px;
-    height: 24px;
+    width: 25px;
+    height: 25px;
   }
 
   .item-count {
     position: absolute;
     font-size: 10px;
     font-weight: bold;
-    bottom: 12px;
+    margin-bottom: 8px;
+    margin-left: 6px;
   }
 }
